@@ -1,3 +1,7 @@
+2010-11-27 Jens Tkotz <jens@peino.de> 1.5.11-svn-b8
+
+* Fix: Actions on Frontpage, Album and Photoview.
+
 2010-11-27 Jens Tkotz <jens@peino.de> 1.5.11-svn-b7
 
 * Fix: Album- and Photoview works now also again (when not logged in).
